[package]
name = "run"
version = "0.1.0"
authors = ["eugen.betke <betke@dkrz.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
algorithm = {path = "../algorithm"}
csv = "1.1"
glob = "0.3.0" 
serde = { version = "1.0", features = ["derive"] }
grizzly = "*"
